--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -8,6 +8,7 @@ set(
     storage/chunk.cpp
     storage/chunk.hpp
     storage/dictionary_column.hpp
+    storage/dictionary_column.cpp
     storage/storage_manager.cpp
     storage/storage_manager.hpp
     storage/table.cpp
