--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -9,6 +9,8 @@ set(
     storage/chunk.hpp
     storage/dictionary_column.hpp
     storage/dictionary_column.cpp
+    storage/fitted_attribute_vector.hpp
+    storage/fitted_attribute_vector.cpp
     storage/storage_manager.cpp
     storage/storage_manager.hpp
     storage/table.cpp
