--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -10,6 +10,7 @@ set(
     operators/print.cpp
     operators/print.hpp
     operators/table_scan.hpp
+    operators/table_scan.cpp
     operators/table_wrapper.cpp
     operators/table_wrapper.hpp
     storage/base_attribute_vector.hpp
